k8s-dev/carpooling-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carpooling-deployment
  labels:
    app: carpooling #key-value pair. Identifier which should be meaningful. Example "env" : "dev"
  namespace: carpooling
spec:
  replicas: 1
  selector:
    matchLabels:
      app: carpooling
  template:
    metadata:
      labels:
        app: carpooling
    spec:
      imagePullSecrets:
      - name: docker-secrets
      containers:
      - name: carpooling
        image: zhzhelev/carpooling:158
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        env:   # Setting Enviornmental Variables
          - name: DB_HOST   # Setting Database host address from configMap
            valueFrom :
              configMapKeyRef :
                name : db-config
                key :  host

          - name: DB_NAME  # Setting Database name from configMap
            valueFrom :
              configMapKeyRef :
                name : db-config
                key :  dbName

          - name: DB_USERNAME  # Setting Database username from Secret
            valueFrom :
              secretKeyRef :
                name : mysql-secrets
                key :  username

          - name: DB_PASSWORD # Setting Database password from Secret
            valueFrom :
              secretKeyRef :
                name : mysql-secrets
                key :  password

---
apiVersion: v1
kind: Service
metadata:
  name: carpooling-service
  namespace: carpooling
spec:
  selector:
    app: carpooling
  type: LoadBalancer
#  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
#      nodePort: 30005
      name: http
