k8s-dev/carpooling-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: carpooling-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: carpooling.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: carpooling-service
            port:
              number: 8080
